-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: port-stage-aarch32-8
-
Component/s: hotspot
-
None
-
aarch32
Multiple crashes were reported after merge with jdk8u352-b01
# Internal Error (c1_LIRAssembler_aarch32.cpp:1896), pid=6951, tid=0xa23af460
# fatal error: unexpected type: *metadata*
# Internal Error (c1_LIRAssembler_aarch32.cpp:1896), pid=6951, tid=0xa23af460
# fatal error: unexpected type: *metadata*
- relates to
-
JDK-8233019 java.lang.Class.isPrimitive() (C1) returns wrong result if Klass* is aligned to 32bit
-
- Resolved
-