8292599: [aarch32] Crash due to missed CPU speicific part of 8233019